App para Desktop

--- a/Entrega 5/SPC Produto - Protótipo v1/electron/screen1.html
+++ b/Entrega 5/SPC Produto - Protótipo v1/electron/screen1.html
@@ -25,7 +25,7 @@
       <div class="e5"></div>
     </div>
     
-    <div id="logo"><img src="../assets2/logo_UDA.svg"></div>
+    <div id="logo"><img src="../assets/logo_UDA.svg"></div>
 
     <div id="slogan">
       <h1>SUA ANÁLISE MAIS FÁCIL</h1>
@@ -54,7 +54,7 @@
 
     <div id="bt_log">
       <button type="submit">
-        <a href="../electron-quick-start/photon-0.1.2-dist/template-app/index.html">Login</a>
+        <a href="../electron/photon-0.1.2-dist/template-app/index.html">Login</a>
       </button>
     </div>
     
